[tool.poetry]
name = "aws_lambda_cache"
version = "0.2.5"
description = "Python utility for caching SSM Parameters & Secrets in AWS Lambda functions"
authors = ["keithrozario <keith@keithrozario.com>"]
repository = "https://github.com/keithrozario/aws_lambda_cache"
homepage = "https://github.com/keithrozario/aws_lambda_cache"
classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
readme = "README.md"
license = "Apache Software License"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^19.10b0"
boto3 = "^1.12.31"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
