[tool.poetry]
name = "simple_lambda_cache"
version = "0.5.4a"
description = "Python utility for simple caching in AWS Lambda functions"
authors = ["keithrozario <keith@keithrozario.com>"]
repository = "https://github.com/keithrozario/aws_lambda_cache"
homepage = "https://github.com/keithrozario/aws_lambda_cache"
classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
readme = "README.md"
license = "Apache Software License"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^19.10b0"
boto3 = "^1.12.31"
PyYaml = "^5.3.1"
pip = "^20.0.2"
pytest-cov = "^2.8.1"
coverage = "^5.0.4"
coveralls = "^1.11.1"
toml = "^0.10.0"
mkdocs = "^1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
