[tool.poetry]
name = "lambda-cache"
version = "0.8.1"
description = "Python utility for simple caching in AWS Lambda functions"
authors = ["keithrozario <keith@keithrozario.com>"]
documentation = "https://lambda-cache.readthedocs.io/en/latest/"
repository = "https://github.com/keithrozario/lambda-cache"
homepage = "https://github.com/keithrozario/lambda-cache"
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
readme = "README.md"
license = "MIT"
keywords = ["aws", "aws_parameter_store", "aws_lambda", "cache"]

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^19.10b0"
boto3 = "^1.12.31"
PyYaml = "^5.3.1"
pip = "^20.0.2"
pytest-cov = "^2.8.1"
coverage = "^5.0.4"
coveralls = "^1.11.1"
toml = "^0.10.0"
mkdocs = "^1.1"
pytest-xdist = "^1.31.0"
pre-commit = "^2.2.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/keithrozario/lambda_cache/issues"
"Docs" = "https://lambda-cache.readthedocs.io"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

